--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,22 @@
 
   <link rel="import" href="vendor/paper-elements/paper-elements.html">
 
+  <link rel="import"
+    href="vendor/core-toolbar/core-toolbar.html">
+  <link rel="import"
+    href="vendor/core-header-panel/core-header-panel.html">
+  <link rel="import"
+    href="vendor/core-icons/core-icons.html">
+  <link rel="import"
+    href="vendor/paper-icon-button/paper-icon-button.html">
+
+
 </head>
 
-<body>
+<body fullbleed unresolved>
 
-<div ng-view></div>
+<div ui-view></div>
 
 </body>
+
 </html>
