--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   
 
   <!-- compiled JavaScript -->
+  <script type="text/javascript" src="vendor/platform/platform.js"></script>
+  
   <script type="text/javascript" src="vendor/angular/angular.js"></script>
   
   <script type="text/javascript" src="vendor/kineticjs/kinetic.js"></script>
   
   <script type="text/javascript" src="vendor/lodash/dist/lodash.js"></script>
   
-  <script type="text/javascript" src="vendor/platform/platform.js"></script>
-  
-  <script type="text/javascript" src="vendor/angular-route/angular-route.js"></script>
+  <script type="text/javascript" src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
   
   <script type="text/javascript" src="src/app/app.js"></script>
   
@@ -31,11 +31,22 @@
 
   <link rel="import" href="vendor/paper-elements/paper-elements.html">
 
+  <link rel="import"
+    href="vendor/core-toolbar/core-toolbar.html">
+  <link rel="import"
+    href="vendor/core-header-panel/core-header-panel.html">
+  <link rel="import"
+    href="vendor/core-icons/core-icons.html">
+  <link rel="import"
+    href="vendor/paper-icon-button/paper-icon-button.html">
+
+
 </head>
 
-<body>
+<body fullbleed unresolved>
 
-<div ng-view></div>
+<div ui-view></div>
 
 </body>
+
 </html>
