--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="happyAppy">
+<html ng-app="appy">
 
 <head>
   <meta charset="utf-8">
@@ -18,13 +18,23 @@
   
   <script type="text/javascript" src="vendor/angular/angular.js"></script>
   
-  <script type="text/javascript" src="vendor/kineticjs/kinetic.js"></script>
-  
   <script type="text/javascript" src="vendor/lodash/dist/lodash.js"></script>
+  
+  <script type="text/javascript" src="vendor/highcharts/adapters/standalone-framework.src.js"></script>
+  
+  <script type="text/javascript" src="vendor/highcharts/highcharts.src.js"></script>
+  
+  <script type="text/javascript" src="vendor/highcharts-ng/dist/highcharts-ng.js"></script>
+  
+  <script type="text/javascript" src="vendor/highlightjs/highlight.pack.js"></script>
   
   <script type="text/javascript" src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
   
   <script type="text/javascript" src="src/app/app.js"></script>
+  
+  <script type="text/javascript" src="src/app/charts/directives.js"></script>
+  
+  <script type="text/javascript" src="src/d3-support/d3service.js"></script>
   
   <script type="text/javascript" src="src/templates.js"></script>
   
