--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,10 @@
   <script type="text/javascript" src="<%= file %>"></script>
   <% }); %>
 
-  <link rel="import" href="vendor/paper-elements/paper-elements.html">
+  <!-- compiled HTML --><% htmls.forEach( function ( file ) { %>
+    <link rel="import" href="<%= file %>">
+  <% }); %>
 
-  <link rel="import"
-    href="vendor/core-toolbar/core-toolbar.html">
-  <link rel="import"
-    href="vendor/core-header-panel/core-header-panel.html">
-  <link rel="import"
-    href="vendor/core-icons/core-icons.html">
-  <link rel="import"
-    href="vendor/paper-icon-button/paper-icon-button.html">
 
 
 </head>
