--- a/index.html
+++ b/index.html
@@ -39,16 +39,18 @@
   <script type="text/javascript" src="src/templates.js"></script>
   
 
-  <link rel="import" href="vendor/paper-elements/paper-elements.html">
+  <!-- compiled HTML -->
+    <link rel="import" href="vendor/paper-elements/paper-elements.html">
+  
+    <link rel="import" href="vendor/core-toolbar/core-toolbar.html">
+  
+    <link rel="import" href="vendor/core-header-panel/core-header-panel.html">
+  
+    <link rel="import" href="vendor/core-icons/core-icons.html">
+  
+    <link rel="import" href="vendor/paper-icon-button/paper-icon-button.html">
+  
 
-  <link rel="import"
-    href="vendor/core-toolbar/core-toolbar.html">
-  <link rel="import"
-    href="vendor/core-header-panel/core-header-panel.html">
-  <link rel="import"
-    href="vendor/core-icons/core-icons.html">
-  <link rel="import"
-    href="vendor/paper-icon-button/paper-icon-button.html">
 
 
 </head>
